# drone-knr

./: .gitignore  .gitmodules  README.md
launch/: drone_sim_launch.py
src/Vision/: package.xml  setup.cfg  setup.py
src/drone_autonomy/: package.xml  setup.cfg  setup.py
src/drone_autonomy/drone_autonomy/: goto_detection_client.py  goto_detection_group.py  mission.py  test_mission.py
src/drone_bringup/: package.xml  setup.py
src/drone_bringup/launch/: drone_basics.launch.py  drone_desktop.launch.py
src/drone_detector/: package.xml  readme.md  setup.cfg  setup.py
src/drone_detector/drone_detector/: detection.py  detection_client.py  detection_subscriber.py  detector.py  detector_gui.py  detector_server.py  image_publisher.py  image_subscriber.py  photos_sized.ui  take_photos.py  test.py
src/drone_gui/: package.xml  readme.md  setup.py
src/drone_hardware/: package.xml  setup.cfg  setup.py
src/drone_interfaces/: CMakeLists.txt  package.xml  readme.md
src/drone_mapping/: package.xml  setup.cfg  setup.py
src/drone_steering/: README.md  arm_test.py  drone_navigator.py  dronekit_utils.py  main.py  mission.py  package.xml  readme.md  setup.cfg  setup.py
src/drone_web/: package.xml  setup.cfg  setup.py
src/drone_web_alt/: README.md
src/drone_web_alt/drone_server/: .gitignore  app.py  file_client.py  pyproject.toml  requirements.txt  schema.sql
src/simulation/: README.md  package.xml  setup.py
src/simulation/launch/: drone_sim.bash  drone_sim_launch.py
src/simulation/simulation/: receiveCamera.py
src/vision/: package.xml  setup.py
(+54 files in other folders)
